# IbEverythingLib

./: .gitignore  README.md
everything-ipc/: Cargo.toml  README.md
everything-ipc/src/: lib.rs  pipe.rs  windows.rs
everything-plugin/: Cargo.toml  download_sdk.py  run.ps1
everything-plugin/examples/: detach.rs
everything-plugin/examples/options/: options.rs
everything-plugin/examples/test/: widgets.rs
everything-plugin/src/: lib.rs
everything-plugin/src/ui/: mod.rs
